<resources>
    <string name="app_name">Carro Branch</string>
    <string name="app_name2">Carro Rental Branch</string>
    <string name="welcome_to_carro_branch">🚗 Welcome to Carro Branch</string>
    <string name="sign_in_to_unlock_the_best_rental_deals_and_manage_your_bookings_with_ease">Sign in to unlock the best rental deals and manage your bookings with ease.</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="login_here">Login Here</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="dashboard">DashBoard</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="customer_notification">Customer Notification</string>
    <string name="vendor_notification">Vendor Notification</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="today_s_bookings">Today\'s Bookings</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="cab">Cab</string>
    <string name="self">Self</string>
    <string name="luxury">Luxury</string>
    <string name="bus">Bus</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="cab_bookings">Cab Bookings</string>
    <string name="bus_bookings">Bus Bookings</string>
    <string name="luxury_bookings">Luxury Car Bookings</string>
    <string name="self_bookings">Self Drive Bookings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="forward">Forward</string>
    <string name="booking_details">Booking Details</string>
    <string name="car_type_name">Car Type Name :</string>
    <string name="car_type_namee">Car Type Name</string>
    <string name="car_details">Car Details</string>
    <string name="seats">Seats : </string>
    <string name="seat">Seat</string>
    <string name="bags">Bags : </string>
    <string name="ac_non_ac">AC/Non-AC : </string>
    <string name="drive_type">Drive Type : </string>
    <string name="service_type">Service Type : </string>
    <string name="driver_details">Driver Details : </string>
    <string name="driver_name">Driver Name : </string>
    <string name="driver_mobile_number">Mobile Number : </string>
    <string name="email_id">Email ID : </string>
    <string name="vendors_details">Vendors Details</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="price">Price : </string>
    <string name="km">KM : </string>
    <string name="total">Total : </string>
    <string name="totall">Total</string>
    <string name="amount_paid">Amount Paid : </string>
    <string name="amount_remains">Amount Remains : </string>
    <string name="select_vendor">Select Vendor</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update_vendor">Update Vendor</string>
    <string name="select_status">Select Status</string>
    <string name="update_status">Update Status</string>
    <string name="licence">Licence : </string>
    <string name="licence_expiry_date">Licence Expiry Date : </string>

    <string name="insert_notification">Insert Notification</string>
    <string name="insert_customer_notification">Send Customer Notification</string>
    <string name="insert_vendor_notification">Send Vendor Notification</string>
    <string name="insert_logout">Logout</string>
    <string name="title">Title</string>
    <string name="customer_name">Customer Name</string>
    <string name="message">Message</string>
    <string name="booking_id">Booking Id</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="send">Send</string>
    <string name="_booking_id">Booking Id</string>
    <string name="no_bookings_yet">No Bookings Yet!</string>
    <string name="we_ll_let_you_know_when_there_will_be_something_to_update_you">We’ll let you know when there will be something to update you.</string>
    <string name="no_notifications_yet">No Notifications Yet...!</string>

    <string name="rental">Rental</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscription</string>
    <string name="pickup">Pickup</string>
    <string name="returnn">Return</string>
    <string name="booking_date">Booking Date</string>
    <string name="branch">Branch :</string>
    <string name="customer_details">Customer Details</string>
    <string name="mobile">Mobile No.</string>
    <string name="city">City</string>
    <string name="vendor_namee">Vendor Name</string>
    <string name="luggage">Luggage</string>
    <string name="drive_typee">Drive Type</string>
    <string name="car_number">Car Number</string>
    <string name="fuel">Fuel</string>
    <string name="package_details">Package Details</string>
    <string name="hour">Hour</string>
    <string name="kmm">KM</string>
    <string name="pricee">Price</string>
    <string name="gst">GST</string>
    <string name="extra_km_amount">Extra KM Amount</string>
    <string name="pickup_amount">Pickup Amount</string>
    <string name="drop_amount">Drop Amount</string>
    <string name="pickup_drop_amount"><![CDATA[Pickup & Drop Amount]]></string>
    <string name="security_deposit_amount_inside_state">Security Deposit Amount (Inside State)</string>
    <string name="security_deposit_amount_outside_state">Security Deposit Amount (Outside State)</string>
    <string name="remark">Remark</string>
    <string name="payment_details">Payment Details</string>
    <string name="base_price">Base Price</string>
    <string name="pickup_drop"><![CDATA[Pickup & Drop]]></string>
    <string name="fastag">Fastag</string>
    <string name="refundable_security_deposit_inside_state">Refundable security Deposit (Inside State)</string>
    <string name="amount_paidd">Amount Paid</string>
    <string name="amount_remain">Amount Remains</string>
    <string name="paymode">Paymode</string>
    <string name="payment">Payment</string>
    <string name="self_drive_rental">Self Drive (Rental)</string>
    <string name="self_drive_subscription">Self Drive (Subscription)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="days">Days</string>
    <string name="refundable_security_deposit">Refundable security Deposit</string>
    <string name="city_ride">City Ride</string>
    <string name="one_way">One Way</string>
    <string name="outstation">Out Station</string>
    <string name="airport">Airport</string>
    <string name="carro">Carro</string>
    <string name="default_notification_channel_id">Chnnel id</string>
</resources>