<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard">
        </item>
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_cab_book"
            android:title="@string/bookings">
        </item>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile">
        </item>
        <item
            android:id="@+id/nav_notification_cus"
            android:icon="@drawable/ic_notification"
            android:title="@string/customer_notification">
        </item>
        <item
            android:id="@+id/nav_notification_ven"
            android:icon="@drawable/icn_notification_ven"
            android:title="@string/vendor_notification">
        </item>
        <item
            android:id="@+id/nav_notification_cus_insert"
            android:icon="@drawable/icn_add_notification_cus"
            android:title="@string/insert_customer_notification">
        </item>

        <item
            android:id="@+id/nav_notification_ven_insert"
            android:icon="@drawable/icn_add_notification_ven"
            android:title="@string/insert_vendor_notification">
        </item>

    </group>
</menu>