<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.InsertNotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


       <include layout="@layout/layout_toolbar"
           android:id="@+id/toolbar"/>



        <TextView
            android:id="@+id/tvCust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/customer_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/edit_text_shape"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvVen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/vendor_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_shape"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spVendorsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <TextView
            android:id="@+id/tvBookId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/_booking_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_shape"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spBookingId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/title"
            android:paddingHorizontal="@dimen/_13sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/message"
            android:paddingHorizontal="@dimen/_13sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_30sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_light"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_15ssp"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_30sdp"
                android:layout_weight="1"

                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/send"
                android:textSize="@dimen/_15ssp"
                app:cornerRadius="@dimen/_10sdp" />


        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>