<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:background="@drawable/image_border_style"
        android:orientation="vertical">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            app:srcCompat="@drawable/img_no_profile"
            android:layout_margin="1dp"
            app:shapeAppearanceOverlay="@style/circleImageView" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        android:gravity="bottom"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_profile"
        android:drawableTint="@color/primary"
        android:drawablePadding="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Raveena Ratrey"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/primary_dark4"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_15sdp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:drawableStart="@drawable/icn_smart_phone"
        android:drawableTint="@color/primary"
        android:drawablePadding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="8755453545"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/primary_dark4"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:drawableStart="@drawable/icn_mali"
        android:drawableTint="@color/primary"
        android:drawablePadding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="raveena@gmail.com"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/primary_dark4"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/primary"
        android:drawablePadding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="gfg3456"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/primary_dark4"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_15sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/update_profile"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        app:icon="@drawable/icn_edit"/>

</LinearLayout>