<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark2"
            android:text="@string/select_status"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/_5sdp"
                android:backgroundTint="@color/gray_light"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/cancel"
                android:layout_gravity="center"
                android:textColor="@color/primary_light9"
                android:textSize="@dimen/_15ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/_5sdp"
                android:backgroundTint="@color/primary_dark2"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/save"
                android:layout_gravity="center"
                android:textColor="@color/primary_light9"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>